Bug 1098990 - Correctly parse version 1 trun segments where the composition time is signed. r=ajones