media/libstagefright/frameworks/av/media/libstagefright/MPEG4Extractor.cpp
@@ -139,7 +139,7 @@ private:
         off64_t offset;
         uint32_t size;
         uint32_t duration;
-        uint32_t ctsOffset;
+        int64_t ctsOffset;
         uint32_t flags;
         uint8_t iv[16];
         Vector<uint16_t> clearsizes;
@@ -2993,12 +2993,10 @@ status_t MPEG4Source::parseTrackFragmentRun(off64_t offset, off64_t size) {
     if (!mDataSource->getUInt32(offset, &flags)) {
         return ERROR_MALFORMED;
     }
+    uint8_t version = flags >> 24;
     ALOGV("fragment run flags: %08x", flags);
 
-    // Some videos have the 0x01000000 flag (unknown) present, and ignoring
-    // it doesn't appear to affect playerback. Assume other flags in the high
-    // byte are invalid.
-    if (flags & 0xfe000000) {
+    if (version > 1) {
         return -EINVAL;
     }
 
@@ -3127,7 +3125,11 @@ status_t MPEG4Source::parseTrackFragmentRun(off64_t offset, off64_t size) {
         tmp.offset = dataOffset;
         tmp.size = sampleSize;
         tmp.duration = sampleDuration;
-        tmp.ctsOffset = sampleCtsOffset;
+        if (version == 0) {
+          tmp.ctsOffset = sampleCtsOffset;
+        } else {
+          tmp.ctsOffset = (int32_t)sampleCtsOffset;
+        }
         mCurrentSamples.add(tmp);
 
         dataOffset += sampleSize;
@@ -3652,7 +3654,7 @@ status_t MPEG4Source::fragmentedRead(
     off64_t offset = 0;
     size_t size = 0;
     uint32_t dts = 0;
-    uint32_t cts = 0;
+    int64_t cts = 0;
     uint32_t duration = 0;
     bool isSyncSample = false;
     bool newBuffer = false;
@@ -3743,7 +3745,7 @@ status_t MPEG4Source::fragmentedRead(
             mBuffer->meta_data()->setInt64(
                     kKeyDecodingTime, ((int64_t)dts * 1000000) / mTimescale);
             mBuffer->meta_data()->setInt64(
-                    kKeyTime, ((int64_t)cts * 1000000) / mTimescale);
+                    kKeyTime, (cts * 1000000) / mTimescale);
             mBuffer->meta_data()->setInt64(
                     kKeyDuration, ((int64_t)duration * 1000000) / mTimescale);
 
@@ -3872,7 +3874,7 @@ status_t MPEG4Source::fragmentedRead(
         mBuffer->meta_data()->setInt64(
                 kKeyDecodingTime, ((int64_t)dts * 1000000) / mTimescale);
         mBuffer->meta_data()->setInt64(
-                kKeyTime, ((int64_t)cts * 1000000) / mTimescale);
+                kKeyTime, (cts * 1000000) / mTimescale);
         mBuffer->meta_data()->setInt64(
                 kKeyDuration, ((int64_t)duration * 1000000) / mTimescale);
 
